RESOLVED FIXED295871
[macOS] [Debug Overlay] Displayed event regions may have incorrect corner radius when page is zoomed
https://bugs.webkit.org/show_bug.cgi?id=295871
Summary [macOS] [Debug Overlay] Displayed event regions may have incorrect corner rad...
Lily Spiniolas
Reported 2025-07-13 16:56:55 PDT
Attachments
Lily Spiniolas
Comment 1 2025-07-13 17:00:08 PDT
EWS
Comment 2 2025-07-13 18:01:58 PDT
Committed 297320@main (f69d44a8db2c): <https://commits.webkit.org/297320@main> Reviewed commits have been landed. Closing PR #47963 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.