[macOS] [Debug Overlay] Displayed event regions may have incorrect corner radius when page is zoomed https://bugs.webkit.org/show_bug.cgi?id=295871 rdar://155748469

Reviewed by Wenson Hsieh.

Scale the displayed corner radius by the page's scale factor.

* Source/WebCore/page/DebugPageOverlays.cpp:
(WebCore::InteractionRegionOverlay::drawRect):

Canonical link: https://commits.webkit.org/297320@main